# HALM-Assembler

./: CHANGELOG.md  README.md  halm.cabal
app/: HLParser.hs  InsParser.hs  Main.hs  ValParser.hs  Values.hs
testCases/: alphabet.halm  biosPrint.halm  biosTyper.halm  dispStr.halm  fileReadHL.halm  fst.halm  initTest.halm  iterationTest.halm  macroMlmTest.halm  macroVarTest.halm  map_test.halm  osTest.halm  tutorial.halm
