cabal-version:      3.0
name:               halm
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Hukasx0
maintainer:         hubertkasp13@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable halm
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0


    hs-source-dirs:   app

    default-language: Haskell2010
